# tdnet-scraper

./: .gitignore  batch_run.py  main.py  pyproject.toml  scandal_detector.py  scandal_summarizer.py  tdnet_scraper.py
.claude/: settings.local.json
